Update query for user object information
