# static/openapi/schema.yml
@@ -55,7 +55,7 @@ paths:
                 items:
                   type: object
                   example: '403'
-              message:
+              message :
                 type: array
                 items:
                   type: object
@@ -126,11 +126,11 @@ paths:
       summary: User Create
       description: User registration in this system
       consumes:
-        - "application/json"
-        - "application/xml"
+      - "application/json"
+      - "application/xml"
       produces:
-        - "application/xml"
-        - "application/json"
+      - "application/xml"
+      - "application/json"
       parameters:
         - in: "body"
           name: "body"
@@ -209,6 +209,61 @@ paths:
               message:
                 type: string
                 example: "You are logged in, so you cannot delete your own details!"
+  /api/v1/auth/<int:userID>/user:
+    put:
+      tags:
+        - User
+      parameters:
+        - in: header
+          name: Authorization
+          type: string
+          required: true
+          description: token.
+        - in: body
+          required: true
+          name: body
+          schema:
+            type: object
+            properties:
+              first_name:
+                type: string
+                example: Test
+              last_name:
+                type: string
+                example: Test
+              email:
+                type: string
+                example: 'test@test.com'
+      summary: Update user profile information by admin
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/UserUpdate'
+        406:
+          description: Not Acceptable
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                example: 406
+              error:
+                type: string
+                example: "Failed to update user profile information"
+        404:
+          description: Not found
+          schema:
+            type: object
+            properties:
+              status:
+                type: string
+                example: 404
+              error:
+                type: string
+                example: "User object not found."
+
+
 
 definitions:
   Users:
@@ -285,4 +340,29 @@ definitions:
           last_Name:
             type: string
             example: 'last name'
-
+  UserUpdate:
+    properties:
+      user:
+        type: object
+        properties:
+          id:
+            type: integer
+            example: 1
+          username:
+            type: string
+            example: 'test'
+          email:
+            type: string
+            example: 'admin@example.com'
+          first_name:
+            type: string
+            example: 'first name'
+          last_Name:
+            type: string
+            example: 'last name'
+      status:
+        type: string
+        example: 200
+      message:
+        type: string
+        example: "User profile updated successfully!"
